<resources>

    <string name="app_name">LinkedIn</string>
    <string name="read_more">read more</string>

    <!-- Bottom Nav View Elements -->
    <string name="BottomNav_Home">Home</string>
    <string name="BottomNav_MyNetwork">My Network</string>
    <string name="BottomNav_Post">Post</string>
    <string name="BottomNav_Notifications">Notifications</string>
    <string name="BottomNav_Jobs">Jobs</string>



</resources>