<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/BottomNav_Home" />

    <item
        android:id="@+id/network"
        android:icon="@drawable/ic_network_2person"
        android:title="@string/BottomNav_MyNetwork" />

    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/BottomNav_Post" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/BottomNav_Notifications" />

    <item
        android:id="@+id/jobs"
        android:icon="@drawable/ic_jobs"
        android:title="@string/BottomNav_Jobs" />


</menu>